--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,60 @@
 body {
   font-family: "Avenir", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
+
+.container {
+    position: relative;
+    width: 100%;
+    padding: 10px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+#image-overlay {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+}
+
+#image-overlay.active {
+    width: 100vw;
+    height: 100vh;
+    opacity: 1;
+    background-color: rgba(0,0,0,0.9);
+}
+
+#image-overlay.leaving {
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    background-color: rgba(0,0,0,0.9);
+}
+
+h1 { font-size: 28px; }
+h2 { font-size: 20px; }
+p {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+img {
+    width: 100%;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+
+.container img:hover {
+    transform: scale(1.02);
+}
+
+@media (min-width: 640px) {
+    .container {
+        max-width: 640px;
+    }
+}
