--- a/static/styles.css
+++ b/static/styles.css
@@ -35,11 +35,19 @@ body {
     background-color: rgba(0,0,0,0.9);
 }
 
-h1 { font-size: 28px; }
-h2 { font-size: 20px; }
+h1 {
+    font-size: 28px;
+    font-weight: 500;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
 p {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.6;
 }
 
 img {
