--- a/static/styles.css
+++ b/static/styles.css
@@ -18,6 +18,7 @@ body {
     left: 0;
     top: 0;
     opacity: 0;
+    overflow: scroll;
     transition: opacity 200ms ease-in-out;
 }
 
@@ -51,10 +52,14 @@ p {
 }
 
 img {
-    width: 100%;
+    margin: auto;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
     cursor: pointer;
     transition: all 200ms ease-in-out;
+}
+
+.container img {
+    width: 100%;
 }
 
 .container img:hover {
