--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@ body {
 #image-overlay {
     position: fixed;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     left: 0;
     top: 0;
