--- a/static/styles.css
+++ b/static/styles.css
@@ -84,16 +84,22 @@ img {
 #heading {
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
 }
 
 #heading img {
     width: 45vw;
+    margin: 0;
 }
 
 @media (min-width: 640px) {
     #container {
         max-width: 1280px;
         display: flex;
+    }
+  
+    #heading {
+        max-width: 1280px;
     }
 
     img {
